--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Daz3d TSD</title>
     <link rel="stylesheet" href="./css/layout-online.css">
     <link rel="stylesheet" type="text/css" href="./css/stack.css">
-    <link rel="stylesheet" data-name="vs/editor/editor.main" href="./node_modules/monaco-editor/min/vs/editor/editor.main.css"/>
+    <link rel="stylesheet" data-name="vs/editor/editor.main" href="./js/monaco-editor/min/vs/editor/editor.main.css"/>
     <style>
         html, body {
             width: 100%;
@@ -81,16 +81,17 @@
     <script src="./lib/FileSaver.min.js"></script>
     <script src="./lib/peg.js"></script>
     <script>
-        var require = { paths: { vs: './node_modules/monaco-editor/min/vs' } };
+        var require = { paths: { vs: './js/monaco-editor/min/vs' } };
+        //var require = { paths: { vs: './node_modules/monaco-editor/min/vs' } };
     </script>
-    <script src="./node_modules/monaco-editor/min/vs/loader.js"></script>
-    <script src="./node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
-    <script src="./node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
-    <script src="./node_modules/monaco-editor/min/vs/basic-languages/typescript/typescript.js"></script>
-    <script src="./node_modules/monaco-editor/min/vs/basic-languages/cpp/cpp.js"></script>
-    <script src="./node_modules/monaco-editor/min/vs/basic-languages/markdown/markdown.js"></script>
-    <script src="./node_modules/monaco-editor/min/vs/language/json/jsonMode.js"></script>
-    <script src="./node_modules/monaco-editor/min/vs/language/typescript/tsMode.js"></script>
+    <script src="./js/monaco-editor/min/vs/loader.js"></script>
+    <script src="./js/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
+    <script src="./js/monaco-editor/min/vs/editor/editor.main.js"></script>
+    <script src="./js/monaco-editor/min/vs/basic-languages/typescript/typescript.js"></script>
+    <script src="./js/monaco-editor/min/vs/basic-languages/cpp/cpp.js"></script>
+    <script src="./js/monaco-editor/min/vs/basic-languages/markdown/markdown.js"></script>
+    <script src="./js/monaco-editor/min/vs/language/json/jsonMode.js"></script>
+    <script src="./js/monaco-editor/min/vs/language/typescript/tsMode.js"></script>
 
 
     <script type="module">
